initial library dm work

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build:prod:classic": "npm run build:restapi && npm run build:restapiv1 && npm run build:docapi && npm run build:devopsapi && npm run build:publish:classic",
     "build:prodlint:classic": "npm run build:oaslinter && npm run build:prod:classic",
     "build:publish:classic": "antora --log-level error --fetch --clean playbooks/site-publish-classic.yaml",
-    "build:local:library": "antora --log-level error --stacktrace --fetch --clean playbooks/site-library.yml",
+    "build:publish:library": "antora --log-level error --stacktrace --fetch --clean playbooks/site-publish-library.yml",
+    "build:local:library": "antora --log-level error --stacktrace --fetch --clean playbooks/site-local-library.yml",
     "build:oaslinter": "npx @redocly/cli lint api/StargateRESTv2.yaml && npx @redocly/cli lint api/StargateRESTv1.yaml && npx @redocly/cli lint api/StargateDocv2.yaml && npx @redocly/cli lint api/DevOpsv2.yaml",
     "collector": "npm run collector:restapi && npm run collector:restapiv1 && npm run collector:docapi && npm run collector:devopsapi",
     "collector:restapi": "redoc-cli build api/StargateRESTv2.yaml --output build/api/restv2.html",
