--- a/playbooks/site-publish-data-models.yaml
+++ b/playbooks/site-publish-data-models.yaml
@@ -153,4 +153,4 @@ asciidoc:
     data-models: 'ssh://github.com/polandll/data-models.git'
 
   extensions:
-  - ~/work/astra-docs/playbooks/lib/tabs-block.js
+  - '@asciidoctor/tabs'
